<resources>
    <string name="app_name" translatable="false">Wethear Today</string>
    <string name="location_from">Location From</string>
    <string name="setting">Setting</string>
    <string name="units_of_temperature">Unit of temperature</string>
    <string name="units_of_wind_speed">Unit of wind speed</string>
    <string name="language">language</string>
    <string name="arabic">arabic</string>
    <string name="english">english</string>
    <string name="save">save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="API_KEY" translatable="false">AIzaSyBdqDAJgxqzgBhD7b6jodornUgnWwiiLu0</string>
    <string name="today">Today</string>
    <string name="title_activity_map">Map</string>
    <string name="save_location">Save Location</string>
    <string name="Kelvin_meter_sec">Kelvin (meter/sec)</string>
    <string name="Celsius_meter_sec_">Celsius (meter/sec)</string>
    <string name="Fahrenheit_miles_hour">Fahrenheit (miles/hour)</string>
    <string name="location">From Map</string>
    <string name="delete">Delete</string>
    <string name="cancle">cancle</string>
    <string name="delete_confirmation">Do you want delete Location ?</string>
    <string name="meter_sec">Metres/Sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="channel_name" translatable="false">location notification</string>
    <string name="channel_description" translatable="false">Hellooooooooooooo</string>
    <string name="notification">notification</string>
    <string name="alarm">alarm</string>
    <string name="notification_type">Alert type</string>
    <string name="aler_cofirmation">Do you want to save Alert  ? For</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="time_drom">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="alert_msg">weather is fine</string>
    <string name="allow_gps">Allow gps permission</string>
    <string name="Allow_gps_permission">Allow Permission</string>
    <string name="pressure_unite">bar</string>
    <string name="humdity_unite">g.kg-1</string>
</resources>