<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SettingScreen.SettingScreen">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/setting"
        android:textColor="#f4fdfd"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLocation"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/units_of_temperature"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/units_of_temperature"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/location_from"
                android:textColor="#f4fdfd" />

            <RadioButton
                android:id="@+id/rb_GPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GPS"
                android:textColor="#b5c4cd" />

            <RadioButton
                android:id="@+id/rb_chosse_location_from_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#b5c4cd" />

        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/units_of_wind"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/units_of_wind_speed"
                android:textColor="#f4fdfd" />

            <RadioButton
                android:id="@+id/rb_meterPerSec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="meter/sec"
                android:textColor="#b5c4cd" />

            <RadioButton
                android:id="@+id/rb_milesPerHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="miles/hour"
                android:textColor="#b5c4cd" />


        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/units_of_temperature"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/units_of_temperature"
                android:textColor="#f4fdfd" />

            <RadioButton
                android:id="@+id/rb_Kelvin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kelvin"
                android:textColor="#b5c4cd" />

            <RadioButton
                android:id="@+id/rb_Celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Celsius"
                android:textColor="#b5c4cd" />

            <RadioButton
                android:id="@+id/rb_Fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fahrenheit"
                android:textColor="#b5c4cd" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_language"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/units_of_wind"
        app:layout_constraintStart_toStartOf="@+id/units_of_wind"
        app:layout_constraintTop_toTopOf="@+id/units_of_temperature">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/language"
                android:textColor="#f4fdfd" />

            <RadioButton
                android:id="@+id/rb_arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textColor="#b5c4cd" />

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="#b5c4cd" />


        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_save_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

</androidx.constraintlayout.widget.ConstraintLayout>