<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".View.MainActivity.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/location_from"
                android:textColor="#f4fdfd"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_GPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GPS"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_chosse_location_from_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />

        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvLocation">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/language"
                android:textColor="#f4fdfd"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/english"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />


        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/units_of_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/units_of_temperature">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/units_of_wind_speed"
                android:textColor="#f4fdfd"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_meterPerSec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="meter/sec"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_milesPerHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="miles/hour"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />


        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/units_of_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#152c39"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_language">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/units_of_temperature"
                android:textColor="#f4fdfd"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_Kelvin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kelvin"
                android:textColor="#b5c4cd"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_Celsius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Celsius"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_Fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fahrenheit"
                android:textColor="#b5c4cd"
                android:textSize="16sp" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>